[tool.poetry]
name = "climbing-on"
version = "0.1.0"
description = "A climbing log"
authors = ["sharanya204"]
readme = "README.md"
packages = [{include = "climbing_on"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
seaborn = "^0.12.2"
setuptools = "^67.8.0"

[tool.poetry.group.dev.dependencies]
click = "^8.1.3"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
seaborn = "^0.12.2"
setuptools = "^67.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
